--- a/main.css
+++ b/main.css
@@ -10,21 +10,20 @@ h1, h2 {
 #container {
 	max-width: 480px;
 	margin: auto;
-	display: flex;
-	flex-direction: column;
-	min-height: 100%;
+	height: 100%;
+}
+header {
+	height: 90px;
 }
 #game-wrapper {
-	display: flex;
-	flex-direction: column;
-	flex: 1;
+	height: calc(100% - 90px);
+	overflow: hidden;
 	border: 4px solid black;
 	border-bottom: none;
 }
 #game {
-	flex: 1;
 	display: flex;
-	flex-direction: column-reverse;
+	flex-direction: column;
 }
 .row {
 	height: 25%;
@@ -33,12 +32,11 @@ h1, h2 {
 }
 .tile {
 	height: 100%;
-	width: 25vw;
+	width: 25%;
 }
 .tile.correct {
 	background: #000;
 }
-
 
 
 
