--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ header {
 	overflow: hidden;
 	border: 4px solid black;
 	border-bottom: none;
+	position: relative;
 }
 #game {
 	display: flex;
@@ -36,6 +37,18 @@ header {
 }
 .tile.correct {
 	background: #000;
+}
+.tile.clicked {
+	background: #777;
+}
+#score {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	text-align: center;
+	font-size: 50px;
+	color: #3AE637;
 }
 
 
