--- a/main.css
+++ b/main.css
@@ -51,5 +51,13 @@ header {
 	color: #3AE637;
 }
 
-
+@media screen and (max-width: 720px) {
+	header {
+		display: none;
+	}
+	#game-wrapper {
+		height: 100%;
+		border: none;
+	}
+}
 
